# logchunk

./: Cargo.toml  Dockerfile  musl-build
src/: import.rs  main.rs  next.rs  utils.rs
src/cli/: def.rs  mod.rs
src/cli/action/: import.rs  mod.rs  next.rs  wrap.rs
tests/: bogus  empty  logchunk  multiple  prefix  report
