[package]
name = "logchunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
fern = "0.6.2"
flate2 = "1.0.30"
glob = "0.3.1"
indoc = "2.0.5"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.2"
rusqlite = "0.31.0"
sha1 = "0.10.6"
tempfile = "3.10.1"
time = { version = "0.3.31", features = ["std", "local-offset", "macros", "formatting" ] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
